RESOLVED FIXED131408
Scrollbars layers don't dynamically update when device scale factor changes
https://bugs.webkit.org/show_bug.cgi?id=131408
Summary Scrollbars layers don't dynamically update when device scale factor changes
Beth Dakin
Reported 2014-04-08 16:55:12 PDT
Scrollbars don't dynamically update when device scale factor changes.
Attachments
Patch (1.98 KB, patch)
2014-04-08 17:01 PDT, Beth Dakin
thorton: review+
Beth Dakin
Comment 1 2014-04-08 16:55:29 PDT
Beth Dakin
Comment 2 2014-04-08 17:01:10 PDT
Beth Dakin
Comment 3 2014-04-08 17:14:54 PDT
Note You need to log in before you can comment on or make changes to this bug.